// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonSemantic Rendering renders with Danger severity 1`] = `
<View
  accessibilityLabel="Danger Button"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#3c4d9d0f",
        "borderRadius": 12,
        "columnGap": 8,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "minWidth": 80,
        "opacity": 1,
        "overflow": "hidden",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      [
        {
          "backgroundColor": "#ca35421a",
        },
        undefined,
      ],
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "color": "#ca3542",
          "flexGrow": 0,
          "flexShrink": 1,
          "flexWrap": "wrap",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Danger Button
  </Text>
</View>
`;

exports[`ButtonSemantic Rendering renders with Success severity 1`] = `
<View
  accessibilityLabel="Success Button"
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#3c4d9d0f",
        "borderRadius": 12,
        "columnGap": 8,
        "flexDirection": "row",
        "height": 48,
        "justifyContent": "center",
        "minWidth": 80,
        "opacity": 1,
        "overflow": "hidden",
        "paddingLeft": 16,
        "paddingRight": 16,
      },
      [
        {
          "backgroundColor": "#457a391a",
        },
        undefined,
      ],
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "color": "#457a39",
          "flexGrow": 0,
          "flexShrink": 1,
          "flexWrap": "wrap",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "fontWeight": 400,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Success Button
  </Text>
</View>
`;
